<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".displayModule.DisplayFragment"
    android:background="#D5D5D5">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/display_height"
        android:background="@color/white">

        <TextView
            android:id="@+id/tvDisplayOperation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/display_number_size_max"
            android:gravity="end"
            android:textStyle="bold"
            android:text="@string/button_numbers_0"
            android:layout_marginHorizontal="@dimen/common_padding_min"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/show_operation"/>

        <TextView
            android:id="@+id/tvDisplayResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/display_number_size_middle"
            android:gravity="end"
            android:text="@string/button_numbers_0"
            android:inputType="numberSigned"
            android:layout_marginHorizontal="@dimen/common_padding_min"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvDisplayOperation"/>

        <TextView
            android:id="@+id/show_operation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:gravity="start"
            android:layout_marginStart="@dimen/common_padding_default"
            tools:text="+"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvDisplayOperation"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnC"
            android:layout_width="200dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/button_margin"
            android:gravity="center_vertical"
            android:text="@string/button_numbers_C"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="@dimen/button_number_size"
            tools:ignore="RtlCompat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPercent"
            android:layout_width="@dimen/button_height"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/button_margin"
            android:gravity="center_vertical"
            android:text="@string/button_numbers_percentage"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/button_number_size"
            tools:ignore="RtlCompat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDivide"
            android:layout_width="@dimen/button_height"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/button_margin"
            android:gravity="center_vertical"
            android:text="@string/button_numbers_divide"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/button_number_size"
            tools:ignore="RtlCompat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn7"
            android:layout_width="@dimen/button_height"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/button_margin"
            android:gravity="center_vertical"
            android:text="@string/button_numbers_7"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/button_number_size"
            tools:ignore="RtlCompat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn8"
            android:layout_width="@dimen/button_height"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/button_margin"
            android:gravity="center_vertical"
            android:text="@string/button_numbers_8"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/button_number_size"
            tools:ignore="RtlCompat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn9"
            android:layout_width="@dimen/button_height"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/button_margin"
            android:gravity="center_vertical"
            android:text="@string/button_numbers_9"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/button_number_size"
            tools:ignore="RtlCompat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMultiplication"
            android:layout_width="@dimen/button_height"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/button_margin"
            android:gravity="center_vertical"
            android:text="@string/button_numbers_multiplication"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/button_number_size"
            tools:ignore="RtlCompat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn4"
            android:layout_width="@dimen/button_height"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/button_margin"
            android:gravity="center_vertical"
            android:text="@string/button_numbers_4"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/button_number_size"
            tools:ignore="RtlCompat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn5"
            android:layout_width="@dimen/button_height"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/button_margin"
            android:gravity="center_vertical"
            android:text="@string/button_numbers_5"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/button_number_size"
            tools:ignore="RtlCompat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn6"
            android:layout_width="@dimen/button_height"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/button_margin"
            android:gravity="center_vertical"
            android:text="@string/button_numbers_6"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/button_number_size"
            tools:ignore="RtlCompat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRest"
            android:layout_width="@dimen/button_height"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/button_margin"
            android:gravity="center_vertical"
            android:text="@string/button_numbers_rest"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/button_number_size"
            tools:ignore="RtlCompat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn1"
            android:layout_width="@dimen/button_height"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/button_margin"
            android:gravity="center_vertical"
            android:text="@string/button_numbers_1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/button_number_size"
            tools:ignore="RtlCompat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn2"
            android:layout_width="@dimen/button_height"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/button_margin"
            android:gravity="center_vertical"
            android:text="@string/button_numbers_2"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/button_number_size"
            tools:ignore="RtlCompat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn3"
            android:layout_width="@dimen/button_height"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/button_margin"
            android:gravity="center_vertical"
            android:text="@string/button_numbers_3"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/button_number_size"
            tools:ignore="RtlCompat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSum"
            android:layout_width="@dimen/button_height"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/button_margin"
            android:gravity="center_vertical"
            android:text="@string/button_numbers_sum"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/button_number_size"
            tools:ignore="RtlCompat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnZero"
            android:layout_width="@dimen/button_height"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/button_margin"
            android:gravity="center_vertical"
            android:text="@string/button_numbers_0"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/button_number_size"
            tools:ignore="RtlCompat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDot"
            android:layout_width="@dimen/button_height"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/button_margin"
            android:gravity="center_vertical"
            android:text="@string/button_numbers_dot"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/button_number_size"
            tools:ignore="RtlCompat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEqual"
            android:layout_width="200dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/button_margin"
            android:gravity="center_vertical"
            android:text="@string/button_numbers_equal"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/button_number_size"
            tools:ignore="RtlCompat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

    </LinearLayout>

</LinearLayout>